syntax = "proto3";

option go_package = "INServer/src/proto/data";

import "data.role.proto";

message Player {
    repeated RoleSummaryData RoleList = 1;
}