syntax = "proto3";

option go_package = "INServer/src/proto/data";

import "data.entity.proto";

// 离线数据
message RoleSummaryData {
    string Name = 1; // 角色名
    int32 Zone = 2; // 游戏区
    string RoleUUID = 3; // RoleUUID
    string PlayerUUID = 4; // PlayerUUID
    string MapUUID = 5; // 所在地图
    string MailUUID = 6; // 邮件地址
}

message RoleAddress {
    int32 Gate = 1;
    int32 Entity = 2;
}

// 在线数据
message RoleOnlineData {
    EntityData EntityData = 1;
}

// 实时数据 与场景相关的数据
message RoleRealtimeData {
    string LastStaticMapUUID = 1;
}

message Role {
    RoleSummaryData SummaryData = 1;
    RoleOnlineData OnlineData = 2;
}