syntax = "proto3";

option go_package = "INServer/src/proto/msg";

import "map.proto";

message LoadStaticMapReq {
    int32 ZoneID = 1;
    int32 StaticMapID = 2;
}

message LoadStaticMapResp {
    MapData Map = 1;
}